# django-chess

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ANDROID_APP_PLAN.md  Dockerfile  README.md  TODO.txt  UI_IMPROVEMENTS.md  backup_db.py  compose.yaml  docker-compose-caddy.yaml  fischer-v-spassky.pgn  fly.toml  generate-version-html.py  justfile  main.py  manage.py  pyproject.toml  requirements.txt  start-daphne.sh  trouble
django_chess/: asgi.py  base_settings.py  dev_settings.py  name_generator.py  prod_settings.py  settings.py  urls.py  wsgi.py
django_chess/api/: __init__.py  serializers.py  urls.py  views.py
django_chess/api/tests/: test_api.py
django_chess/app/: apps.py  forms.py  middleware.py  models.py  test_stuff.py  utils.py  version.py  views.py
django_chess/app/management/commands/: unstick_games.py
django_chess/app/migrations/: 0001_initial.py  0002_remove_game_board_fen_game_moves.py  0003_game_computer_think_time_ms.py  0004_alter_game_id.py  0005_game_in_progress.py  0006_remove_game_computer_think_time_ms_and_more.py  0007_game_name.py  0008_alter_game_name.py  0009_update_game_names_with_uuid_seed.py  0010_add_timestamps.py  0011_alter_game_options.py
django_chess/app/static/: privacy-policy.html
django_chess/app/templates/app/: base.html  buttonlike-div.html  error.html  game.html  home.html  import-pgn-form.html  new-game-form.html  smartness-slider.html
django_chess/app/tests/: promotion_moves.py  repro_moves.py  test_en_passant.py  test_pawn_promotion.py  test_repro.py
