[project]
name = "django-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "python-chess>=1.999",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "django-stubs[compatible-mypy]>=5.2.2",
    "mypy>=1.17.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_chess.settings"
